# multi_mod_bernoulli

./: README.md  README.org  main.py  pyproject.toml
src/: bernoulli.py  crt.py
tests/: test_bn_factors.py  test_equal_wikipedia.py  test_primitive_root.py  test_threads.py
