[project]
name = "multi-mod-bernoulli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "pytest>=8.3.4",
    "sympy>=1.13.3",
]

[tool.uv]
dev-dependencies = [
    "python-lsp-server[all]>=1.12.0",
]
